--- a/style.css
+++ b/style.css
@@ -29,11 +29,8 @@ nav {
     display: flex;
 }
 
-.nav-element {
-    padding: 10px;
-}
-
 .nav-element a {
+    padding: 10px;
     color: seashell;
 }
 
@@ -54,7 +51,7 @@ nav {
 }
 
 #tea-of-the-month {
-    width: 1000px;
+    max-width: 1000px;
     margin: auto;
 }
 
@@ -63,7 +60,6 @@ nav {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-
 }
 
 .tea-image-card img {
@@ -77,9 +73,10 @@ nav {
 }
 
 #locations {
-    height: 500px;
+    min-height: 500px;
     background-image: url("images/img-locations-background.jpg");
     background-size: cover;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -102,7 +99,7 @@ nav {
      background-color: black;
      opacity: 1;
      width: 300px;
-     margin: 0 20px;
+     margin: 0 20px 20px 20px;
 }
 
 #contact {
